fixed images in README.md (#6)